# WebCrawler

./: .cproject  .gitignore  .project  CMakeLists.txt  Frontier.cpp  README.md  Seeds.txt  config.h.in  docker-compose.yml  main.cpp
Docker/: main.Dockerfile  proxy.Dockerfile  scraper.Dockerfile
cpp/include/: DNS_Resolver.hpp  Frontier.hpp
cpp/src/: Frontier.cpp  RedisReplyPtr.cpp  WebScraper.cpp
include/: DNS_Resolver.hpp  Frontier.hpp  RedisReplyPtr.hpp  WebScraper.hpp
py/: app.py  dynamic_scraper.py  proxy.py  requirements.txt  scraper_manager.py  test_example.py
py/Docker/: Dockerfile
py/app/: app.py  requirements.txt  scraper_manager.py
py/proxy/: proxy.py  requirements.txt
src/: DNS_Resolver.cpp  Frontier.cpp  WebScraper.cpp
